# ianews

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: sources.example.yaml  sources.yaml
ianews/: __main__.py  cli.py  config_loader.py  db.py  digest.py  external_runner.py  feeds.py  filter.py  web.py
